[package]
name = "app"
version = "1.0.0"
description = "Clipper"
authors = ["Anuradha Wickramarachchi <anuradhawick@gmail.com>"]
license = "AGPL 3.0"
repository = "https://github.com/anuradhawick/clipper"
default-run = "app"
edition = "2021"
rust-version = "1.81.0"

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
tauri = { version = "2.1.1", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-positioner = "2.0.2"
arboard = "3.4.1"
tokio = { version = "1.41.1", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-rustls"] }
chrono = "0.4.38"
tauri-plugin-shell = "2.0.2"
log = "0.4.22"
tauri-plugin-log = "2.0.2"
image = "0.25.5"

# macos dependencies
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
cocoa = "0.26.0"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
system-notification = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.0.1"
