[package]
name = "app"
version = "1.4.0"
description = "Clipper"
authors = ["Anuradha Wickramarachchi <anuradhawick@gmail.com>"]
license = "AGPL 3.0"
repository = "https://github.com/anuradhawick/clipper"
default-run = "app"
edition = "2021"
rust-version = "1.93.1"

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
tauri = { version = "2.10.3", features = ["macos-private-api", "tray-icon"] }
arboard = "3.4.1"
tokio = { version = "1.52.1", features = ["full"] }
uuid = { version = "1.23.1", features = ["v4"] }
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio-rustls"] }
chrono = "0.4.44"
log = "0.4.26"
tauri-plugin-log = "2.3.1"
image = "0.25.10"
tauri-plugin-opener = "2.2.6"
mouse_position = "0.1.4"
futures = "0.3.31"
url = "2.5.4"
tauri-plugin-os = "2.0.0-rc"
regex = "1.12.2"
reqwest = { version = "0.13.2", features = ["json"] }
scraper = "0.26.0"
anyhow = "1.0.100"
thiserror = "2.0.18"

# macos dependencies
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
cocoa = "0.26.0"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
system-notification = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2.2.0"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
